--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     .chip{border:1px solid #475569;border-radius:999px;padding:.2rem .6rem;font-size:.75rem}
     .tab-btn.active{border-bottom:2px solid #60a5fa;color:#60a5fa}
     .ghost{opacity:.4}
-    .mono{font-family: ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace}
+    .mono{font-family: 'Sarabun',ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace}
   </style>
 </head>
 <body class="min-h-screen">
